change the quantity able to accept decimal points
sort vehicle by company, then latest mileage, so with GSP sensor would stay at top

add inspection due date and status for vehicle